// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select_distinct_on.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "distinctClause": [
            {
              "ColumnRef": {
                "fields": [
                  {
                    "String": {
                      "sval": "string4",
                    },
                  },
                ],
                "location": 49,
              },
            },
          ],
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 84,
                "relname": "onek",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": 115,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "string4",
                        },
                      },
                    ],
                    "location": 101,
                  },
                },
                "sortby_dir": "SORTBY_USING",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                "useOp": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
              },
            },
            {
              "SortBy": {
                "location": 128,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "two",
                        },
                      },
                    ],
                    "location": 118,
                  },
                },
                "sortby_dir": "SORTBY_USING",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                "useOp": [
                  {
                    "String": {
                      "sval": ">",
                    },
                  },
                ],
              },
            },
            {
              "SortBy": {
                "location": 141,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ten",
                        },
                      },
                    ],
                    "location": 131,
                  },
                },
                "sortby_dir": "SORTBY_USING",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                "useOp": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 58,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "string4",
                        },
                      },
                    ],
                    "location": 58,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 67,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "two",
                        },
                      },
                    ],
                    "location": 67,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 72,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ten",
                        },
                      },
                    ],
                    "location": 72,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_distinct_on.sql > line 8 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "distinctClause": [
            {
              "ColumnRef": {
                "fields": [
                  {
                    "String": {
                      "sval": "string4",
                    },
                  },
                ],
                "location": 81,
              },
            },
            {
              "ColumnRef": {
                "fields": [
                  {
                    "String": {
                      "sval": "ten",
                    },
                  },
                ],
                "location": 90,
              },
            },
          ],
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 121,
                "relname": "onek",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": 152,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "string4",
                        },
                      },
                    ],
                    "location": 138,
                  },
                },
                "sortby_dir": "SORTBY_USING",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                "useOp": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
              },
            },
            {
              "SortBy": {
                "location": 165,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "two",
                        },
                      },
                    ],
                    "location": 155,
                  },
                },
                "sortby_dir": "SORTBY_USING",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                "useOp": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
              },
            },
            {
              "SortBy": {
                "location": 178,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ten",
                        },
                      },
                    ],
                    "location": 168,
                  },
                },
                "sortby_dir": "SORTBY_USING",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                "useOp": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 95,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "string4",
                        },
                      },
                    ],
                    "location": 95,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 104,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "two",
                        },
                      },
                    ],
                    "location": 104,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 109,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ten",
                        },
                      },
                    ],
                    "location": 109,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_distinct_on.sql > line 13 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "distinctClause": [
            {
              "ColumnRef": {
                "fields": [
                  {
                    "String": {
                      "sval": "string4",
                    },
                  },
                ],
                "location": 22,
              },
            },
            {
              "ColumnRef": {
                "fields": [
                  {
                    "String": {
                      "sval": "ten",
                    },
                  },
                ],
                "location": 31,
              },
            },
          ],
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 62,
                "relname": "onek",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": 93,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "string4",
                        },
                      },
                    ],
                    "location": 79,
                  },
                },
                "sortby_dir": "SORTBY_USING",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                "useOp": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
              },
            },
            {
              "SortBy": {
                "location": 106,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ten",
                        },
                      },
                    ],
                    "location": 96,
                  },
                },
                "sortby_dir": "SORTBY_USING",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                "useOp": [
                  {
                    "String": {
                      "sval": ">",
                    },
                  },
                ],
              },
            },
            {
              "SortBy": {
                "location": 119,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "two",
                        },
                      },
                    ],
                    "location": 109,
                  },
                },
                "sortby_dir": "SORTBY_USING",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                "useOp": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 36,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "string4",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 45,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ten",
                        },
                      },
                    ],
                    "location": 45,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 50,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "two",
                        },
                      },
                    ],
                    "location": 50,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_distinct_on.sql > line 17 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "distinctClause": [
            {
              "A_Const": {
                "ival": {
                  "ival": 1,
                },
                "location": 87,
              },
            },
          ],
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 120,
                "relname": "int4_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 138,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "A_Const": {
                    "ival": {
                      "ival": 2,
                    },
                    "location": 140,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 90,
                "name": "r",
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "FuncCall": {
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "random",
                              },
                            },
                          ],
                          "location": 96,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "floor",
                        },
                      },
                    ],
                    "location": 90,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 112,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 112,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_distinct_on.sql > line 20 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExplainStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "costs",
                "location": 209,
              },
            },
          ],
          "query": {
            "SelectStmt": {
              "distinctClause": [
                {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "four",
                        },
                      },
                    ],
                    "location": 240,
                  },
                },
              ],
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 263,
                    "relname": "tenk1",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "sortClause": [
                {
                  "SortBy": {
                    "location": -1,
                    "node": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 293,
                      },
                    },
                    "sortby_dir": "SORTBY_DEFAULT",
                    "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                  },
                },
              ],
              "targetList": [
                {
                  "ResTarget": {
                    "location": 246,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "four",
                            },
                          },
                        ],
                        "location": 246,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 251,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "two",
                            },
                          },
                        ],
                        "location": 251,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "four",
                          },
                        },
                      ],
                      "location": 275,
                    },
                  },
                  "location": 280,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "A_Const": {
                      "ival": {},
                      "location": 282,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_distinct_on.sql > line 30 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "distinctClause": [
            {
              "ColumnRef": {
                "fields": [
                  {
                    "String": {
                      "sval": "four",
                    },
                  },
                ],
                "location": 76,
              },
            },
          ],
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 99,
                "relname": "tenk1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 129,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 82,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "four",
                        },
                      },
                    ],
                    "location": 82,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 87,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "two",
                        },
                      },
                    ],
                    "location": 87,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "four",
                      },
                    },
                  ],
                  "location": 111,
                },
              },
              "location": 116,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {},
                  "location": 118,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_distinct_on.sql > line 34 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExplainStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "costs",
                "location": 88,
              },
            },
          ],
          "query": {
            "SelectStmt": {
              "distinctClause": [
                {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "four",
                        },
                      },
                    ],
                    "location": 119,
                  },
                },
              ],
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 142,
                    "relname": "tenk1",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "sortClause": [
                {
                  "SortBy": {
                    "location": -1,
                    "node": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 172,
                      },
                    },
                    "sortby_dir": "SORTBY_DEFAULT",
                    "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                  },
                },
                {
                  "SortBy": {
                    "location": -1,
                    "node": {
                      "A_Const": {
                        "ival": {
                          "ival": 2,
                        },
                        "location": 174,
                      },
                    },
                    "sortby_dir": "SORTBY_DEFAULT",
                    "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                  },
                },
              ],
              "targetList": [
                {
                  "ResTarget": {
                    "location": 125,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "four",
                            },
                          },
                        ],
                        "location": 125,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 130,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "two",
                            },
                          },
                        ],
                        "location": 130,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "four",
                          },
                        },
                      ],
                      "location": 154,
                    },
                  },
                  "location": 159,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "A_Const": {
                      "ival": {},
                      "location": 161,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`select_distinct_on.sql > line 39 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExplainStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "costs",
                "location": 103,
              },
            },
          ],
          "query": {
            "SelectStmt": {
              "distinctClause": [
                {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "four",
                        },
                      },
                    ],
                    "location": 134,
                  },
                },
              ],
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 161,
                    "relname": "tenk1",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "sortClause": [
                {
                  "SortBy": {
                    "location": -1,
                    "node": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 191,
                      },
                    },
                    "sortby_dir": "SORTBY_DEFAULT",
                    "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                  },
                },
                {
                  "SortBy": {
                    "location": -1,
                    "node": {
                      "A_Const": {
                        "ival": {
                          "ival": 2,
                        },
                        "location": 193,
                      },
                    },
                    "sortby_dir": "SORTBY_DEFAULT",
                    "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                  },
                },
              ],
              "targetList": [
                {
                  "ResTarget": {
                    "location": 140,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "four",
                            },
                          },
                        ],
                        "location": 140,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 145,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "hundred",
                            },
                          },
                        ],
                        "location": 145,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "four",
                          },
                        },
                      ],
                      "location": 173,
                    },
                  },
                  "location": 178,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "A_Const": {
                      "ival": {},
                      "location": 180,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;
